--- a/src/main/resources/javafx/simulation.fxml
+++ b/src/main/resources/javafx/simulation.fxml
@@ -10,7 +10,7 @@
         <children>
             <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="148.0">
                 <children>
-                    <Button mnemonicParsing="false" text="Retour">
+                    <Button fx:id="btn_retour" mnemonicParsing="false" text="Retour">
                         <HBox.margin>
                             <Insets left="12.0" />
                         </HBox.margin>
