--- a/src/main/resources/javafx/simulation.fxml
+++ b/src/main/resources/javafx/simulation.fxml
@@ -5,9 +5,7 @@
 <?import javafx.scene.layout.*?>
 
 <VBox prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.GameController">
-
-    <!--Grid-->
-    <GridPane fx:id="gridPane" prefHeight="600.0" prefWidth="600.0" />
+   <Pane fx:id="pane" prefHeight="600.0" prefWidth="600.0" />
     <HBox prefHeight="50.0" prefWidth="600.0">
         <children>
             <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="148.0">
