--- a/src/main/resources/javafx/simulation.fxml
+++ b/src/main/resources/javafx/simulation.fxml
@@ -4,36 +4,40 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.GameController">
-   <Pane fx:id="pane" prefHeight="600.0" prefWidth="600.0" />
-    <HBox prefHeight="50.0" prefWidth="600.0">
-        <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="148.0">
-                <children>
-                    <Button fx:id="btn_retour" mnemonicParsing="false" text="Retour">
-                        <HBox.margin>
-                            <Insets left="12.0" />
-                        </HBox.margin>
-                    </Button>
-                </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="173.0">
-                <children>
-                    <Button mnemonicParsing="false" text="PLAY" />
-                    <Button mnemonicParsing="false" text="PAUSE" />
-                    <Button fx:id="btn_update_once" mnemonicParsing="false" text="&gt;" />
-                </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="50.0" prefWidth="280.0">
-                <children>
-                    <Label text="Speed">
-                        <HBox.margin>
-                            <Insets right="10.0" />
-                        </HBox.margin>
-                    </Label>
-                    <Slider prefHeight="14.0" prefWidth="171.0" />
-                </children>
-            </HBox>
-        </children>
-    </HBox>
+<VBox prefHeight="650.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.GameController">
+   <HBox prefHeight="653.0" prefWidth="800.0">
+      <children>
+         <Pane fx:id="pane" prefHeight="650.0" prefWidth="650.0" />
+          <HBox prefHeight="650.0" prefWidth="250.0">
+              <children>
+               <VBox prefHeight="650.0">
+                  <children>
+                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="273.0">
+                        <children>
+                                <Button mnemonicParsing="false" text="PLAY" />
+                                <Button fx:id="btn_update_once" mnemonicParsing="false" text="&gt;">
+                              <HBox.margin>
+                                 <Insets left="10.0" right="10.0" />
+                              </HBox.margin>
+                           </Button>
+                                <Button mnemonicParsing="false" text="PAUSE" />
+                        </children>
+                     </HBox>
+                        <HBox alignment="CENTER" prefHeight="50.0" prefWidth="148.0">
+                        <children>
+                                <Label text="Speed">
+                              <HBox.margin>
+                                 <Insets right="10.0" />
+                              </HBox.margin>
+                           </Label>
+                                <Slider prefHeight="14.0" prefWidth="171.0" />
+                        </children></HBox>
+                          <Button fx:id="btn_retour" mnemonicParsing="false" text="Retour" />
+                     <ComboBox fx:id="cmb_colors" prefWidth="150.0" />
+                  </children>
+               </VBox>
+              </children>
+          </HBox>
+      </children>
+   </HBox>
 </VBox>
