--- a/src/main/resources/javafx/menu.fxml
+++ b/src/main/resources/javafx/menu.fxml
@@ -21,35 +21,55 @@
                </font></Label>
          </top>
          <bottom>
-            <Label text="Made by Nino, Tibouyou, Coara, Blova &amp; UKU" BorderPane.alignment="CENTER" />
+            <Label text="Powered by Nino, Tibouyou, Coara, Blova &amp; UKU" BorderPane.alignment="CENTER" />
          </bottom>
-         <left>
-            <GridPane BorderPane.alignment="CENTER">
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="10.0" prefWidth="51.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="123.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="92.0" minWidth="10.0" prefWidth="34.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="134.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="88.0" minWidth="10.0" prefWidth="33.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="10.0" prefWidth="134.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="56.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints maxHeight="88.0" minHeight="10.0" prefHeight="56.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="76.0" minHeight="9.0" prefHeight="43.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="74.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+         <center>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="btn_new_automate" alignment="CENTER" mnemonicParsing="false" prefHeight="154.0" prefWidth="213.0" text="NEW AUTOMATE" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button fx:id="btn_load_rule" alignment="CENTER" mnemonicParsing="false" prefHeight="105.0" prefWidth="180.0" text="LOAD Rule" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                  <Button fx:id="btn_load_map" alignment="CENTER" mnemonicParsing="false" prefHeight="86.0" prefWidth="171.0" text="LOAD Map" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                  <Button fx:id="btn_start" alignment="CENTER" defaultButton="true" mnemonicParsing="false" prefHeight="89.0" prefWidth="258.0" text="START" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                  <Button fx:id="btn_exit" mnemonicParsing="false" text="Exit" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+                  <HBox prefHeight="120.0" prefWidth="560.0">
+                     <children>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="280.0">
+                           <children>
+                              <Label text="Automate :" />
+                              <Label fx:id="lbl_info_automate" text="lbl_info_automate">
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </VBox.margin></Label>
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="280.0">
+                           <children>
+                              <Label text="Map :" />
+                              <Label fx:id="lbl_info_map" prefHeight="20.0" text="lbl_info_map">
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </VBox.margin></Label>
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </HBox.margin>
+                        </VBox>
+                     </children></HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="560.0">
+                     <children>
+                        <Button fx:id="btn_modify_automate" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" text="Modify Automate" />
+                        <Button fx:id="btn_start" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" text="Start">
+                           <HBox.margin>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </HBox.margin></Button>
+                        <Button fx:id="btn_modify_map" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" text="Modify Map" />
+                     </children></HBox>
+                  <HBox alignment="BOTTOM_RIGHT" prefHeight="45.0" prefWidth="560.0">
+                     <children>
+                        <Button fx:id="btn_exit" alignment="CENTER" mnemonicParsing="false" text="Exit" />
+                     </children>
+                  </HBox>
                </children>
-            </GridPane>
-         </left>
+            </VBox>
+         </center>
       </BorderPane>
    </children>
 </StackPane>
