--- a/src/main/resources/javafx/simulation.fxml
+++ b/src/main/resources/javafx/simulation.fxml
@@ -20,7 +20,7 @@
                                  <Insets left="10.0" right="10.0" />
                               </HBox.margin>
                            </Button>
-                                <Button mnemonicParsing="false" text="PAUSE" />
+                                <Button fx:id="btn_pause" mnemonicParsing="false" text="PAUSE" />
                         </children>
                      </HBox>
                         <HBox alignment="CENTER" prefHeight="50.0" prefWidth="148.0">
@@ -30,7 +30,7 @@
                                  <Insets right="10.0" />
                               </HBox.margin>
                            </Label>
-                                <Slider prefHeight="14.0" prefWidth="171.0" />
+                                <Slider fx:id="speedSlider" prefHeight="14.0" prefWidth="171.0" />
                         </children></HBox>
                           <Button fx:id="btn_retour" mnemonicParsing="false" text="Retour" />
                      <ComboBox fx:id="cmb_colors" prefWidth="150.0" />
