--- a/src/main/resources/javafx/automateCreator.fxml
+++ b/src/main/resources/javafx/automateCreator.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gui.AutomateCreatorController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AutomateCreatorController">
+   <children>
+      <ComboBox fx:id="cb_select_rule" layoutX="49.0" layoutY="188.0" prefWidth="150.0" />
+      <Button fx:id="btn_save" layoutX="310.0" layoutY="350.0" mnemonicParsing="false" text="SAVE" />
+      <Button fx:id="btn_play" layoutX="248.0" layoutY="350.0" mnemonicParsing="false" text="PLAY" />
+   </children>
 </AnchorPane>
