--- a/src/main/resources/javafx/automateCreator.fxml
+++ b/src/main/resources/javafx/automateCreator.fxml
@@ -8,5 +8,7 @@
       <ComboBox fx:id="cb_select_rule" layoutX="49.0" layoutY="188.0" prefWidth="150.0" />
       <Button fx:id="btn_save" layoutX="310.0" layoutY="350.0" mnemonicParsing="false" text="SAVE" />
       <Button fx:id="btn_play" layoutX="248.0" layoutY="350.0" mnemonicParsing="false" text="PLAY" />
+      <Pane fx:id="pane_neighbors" layoutX="386.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" />
+      <CheckBox fx:id="is_hexa" layoutX="296.0" layoutY="85.0" mnemonicParsing="false" text="CheckBox" />
    </children>
 </AnchorPane>
