--- a/src/main/resources/javafx/menu.fxml
+++ b/src/main/resources/javafx/menu.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
@@ -59,7 +61,13 @@
                         <Button fx:id="btn_start" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" text="Start">
                            <HBox.margin>
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                           </HBox.margin></Button>
+                           </HBox.margin>
+                           <cursor>
+                              <Cursor fx:constant="CROSSHAIR" />
+                           </cursor>
+                           <effect>
+                              <Glow />
+                           </effect></Button>
                         <Button fx:id="btn_modify_map" minHeight="40.0" minWidth="125.0" mnemonicParsing="false" text="Modify Map" />
                      </children></HBox>
                   <HBox alignment="BOTTOM_RIGHT" prefHeight="45.0" prefWidth="560.0">
