--- a/src/main/resources/javafx/automateCreator.fxml
+++ b/src/main/resources/javafx/automateCreator.fxml
@@ -17,4 +17,5 @@
          <Font size="18.0" />
       </font>
    </Label>
+   <Pane fx:id="pane_tab" layoutX="11.0" layoutY="156.0" prefHeight="230.0" prefWidth="515.0" />
 </AnchorPane>
